<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#61B246"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="Lista de Chequeo Norma para Agricultura Sostenible RAC"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECECEC"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="46sp"
            android:textColor="#808080"
            android:fontFamily="sans-serif-thin"
            android:text="Recomendaciones"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Diego Fernando Lara"
                    android:textSize="20sp"
                    android:textColor="#5B5B5B"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="Auditor"
                    android:textColor="#028F30"/>

            </LinearLayout>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/thumb"/>

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionesuno"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionesdos"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/recouno"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionestres"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/recodos"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionescuatro"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionescinco"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionesseis"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/recotres"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionessiete"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/recocuatro"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#61B246"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/recomendacionesocho"/>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
