<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/estilosbotonredondoformulario"
            android:padding="25dp"
            android:text="1.1"
            android:textSize="28sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="90dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Sistema de Gestión Social y Ambiental acorde al tamaño y complejidad de la empresa"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMainSI"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:text="@string/Si"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnMainM"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:text="@string/M"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnMainm"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:text="@string/m"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnMainNA"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:text="@string/NA"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="#61B246"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Sistema de Gestión Social y Ambiental"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sistema"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:text="@string/Si"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="#61B246"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Políticas"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/politicas"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:text="Programas"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/programas"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:text="Procedimientos"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/procedimientos"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="#61B246"></LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="Cumple legislación Nacional para aspectos: "
                android:textColor="#ccc"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Sociales"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/sociales"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:text="Laborales"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/laborales"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:gravity="center_vertical"
                    android:text="Ambientales"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/ambientales"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/estilosbotonformularioprincipal"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:background="#EFF7EB"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Origen de la información"
            android:textColor="#008748"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMainD"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilosbotonformularioorigen"
            android:text="@string/D"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnMainE"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilosbotonformularioorigen"
            android:text="@string/E"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnMainO"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/estilosbotonformularioorigen"
            android:text="@string/O"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="Agregar Observaciones"
            android:textColor="#008748"
            android:textStyle="bold"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/observaciones"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/observaciones"
            android:scaleType="fitXY"
            android:background="@null"/>

    </LinearLayout>


</LinearLayout>
